--- a/artists/index.html
+++ b/artists/index.html
@@ -1,5 +1,65 @@
 ---
 title: Artists
 layout: main
+image_dir: /img/artists/
+images:
+    - CAT-FB-Portrait-200x200.jpg
+    - massif_web-200x200.jpg
+    - SJS-FB-Portrait-200x200.jpg
+    - lee-avatar.jpg
+    - Contemplation-e1481967510565-200x200.jpg
+    - WHO-FB-Portrait-200x200.jpg
+    - Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg
+    - 14711548_10157710328210232_5327692004010228824_o-200x200.jpg
+    - Fara-head-and-shoulders-200x200.jpg
 ---
 <br />
+
+<h3>Association Artists</h3>
+
+<img src="/img/artists/CAT-FB-Portrait-200x200.jpg" />
+<p>Cat Saunders</p>
+<p>Works in acrylic, silver-leaf and gouache. Cat's delicate touch captures the detail of her subjects.</p>
+<p>Oeuvres en acrylique, feuille d'argent et gouache. La touche délicate de la peinture de Cat saisit le détail de ses sujets.</p>
+
+<img src="/img/artists/massif_web-200x200.jpg" />
+<p>Rob Scott</p>
+<p>Digital illustration and graphic design.</p>
+<p>Illustration et dessin numérique.</p>
+
+<img src="/img/artists/SJS-FB-Portrait-200x200.jpg" />
+<p>Sophie Scott</p>
+<p>Works in oil, pastels and watercolour. Sophie's paintings bring to life the colours of the mountains.</p>
+<p>Oeuvres en huile, pastels et aquarelles. Les peintures de Sophie animent les couleurs des montagnes.</p>
+
+<img src="/img/artists/lee-avatar.jpg" />
+<p>Lee Johnson</p>
+<p>Photographer working on long term projects using traditional analog techniques.</p>
+<p>Photographe travaillant sur des projets à long terme utilisant des techniques analogiques traditionnelles.</p>
+
+<h3>Visiting Artists</h3>
+
+<img src="/img/artists/Contemplation-e1481967510565-200x200.jpg" />
+<p>Sofia Leconte Mitev</p>
+<p>Works in acrylic and mixed media. Sofia has a unique perspective on her environment.</p>
+<p>Oeuvres en acrylique et technique mixte. Sofia a une perspective unique sur son environnement.</p>
+
+<img src="/img/artists/WHO-FB-Portrait-200x200.jpg" />
+<p>Bill O'Connor</p>
+<p>Works in oil, often painted on location. Bill brings a spirit of adventure to his paintings.</p>
+<p>Oeuvres en huile peints souvent en plein air. Bill amène un esprit aventureux à ses peintures.</p>
+
+<img src="/img/artists/Chamonix-LacBlanc-Balcons-4123-instagram-200x200.jpg" />
+<p>Emma Godfrey Pigott</p>
+<p>Fine art digital photography. Emma is fascinated by the force of nature.</p>
+<p>Oeuvres de photographie numérique. Emma a une fascination pour la force de la nature.</p>
+
+<img src="/img/artists/14711548_10157710328210232_5327692004010228824_o-200x200.jpg" />
+<p>Jezella Pigott</p>
+<p>Jezella works in a number of media. Here she presents some of her drawings and screen prints of the natural world.</p>
+<p>Jezella travaille dans plusieurs medias. Ici, elle montre ses dessins et ses sérigraphies de la nature.</p>
+
+<img src="/img/artists/Fara-head-and-shoulders-200x200.jpg" />
+<p>Fara Torrance</p>
+<p>Working in oil and egg tempera, Fara's paintings have a distinctive style and colour palette.</p>
+<p>Oeuvres en huile et tempera. Les peintures de Fara ont un style et une palette très distinctifs.</p>
