artists pages, Rob's to complete when get a bio/img

--- a/artists/cat-saunders/index.html
+++ b/artists/cat-saunders/index.html
@@ -3,6 +3,21 @@ title: Cat Saunders
 layout: artist
 image_dir: /img/artists/cat/
 images:
-    - 
+    - Cat-artist-header-ga.jpg
 ---
-<br />
+
+{% include slides.html %}
+
+<p>Cat Saunders is a local artist originally from the UK. After graduating from University in Design she discovered her love for painting. Working mainly in Acrylic and Gouache she uses the mountains around her as inspiration for her most recent work. Cat also loves to run the mountain paths around Villars taking her camera with her ready to capture inspiration for her next painting.</p>
+
+<blockquote><p>
+“Whilst I’m running it’s a good excuse to keep looking around at the view rather than just the path below my feet.”
+</p></blockquote>
+
+<hr>
+
+<p>Cat Saunders est une artiste vivant à Chesières, originaire du Royaume Uni. Après avoir terminé ses études de dessin à l’université, elle se découvre une passion pour la peinture. Les montagnes sont une source d’inspiration pour ses nouvelles oeuvres à l’acrylique et gouache. Un amour pour la trail  l’amène tout autour de Villars, un appareil photo prêt à saisir l’inspiration pour une nouvelle peinture.</p>
+
+<blockquote><p>
+“C’est une très bonne excuse de garder l’oeil à l’horizon plutôt qu’à mes pieds,” dit-elle.
+</p></blockquote>
