just about done
TODO:
	- styling
	- Rob bio + photo
	- photography course details
	- association copy + links to docs
	- re-point domain at github

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,13 +5,9 @@ layout: studio
 
 <h3>Say Hello!</h3>
 
-<p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific or just say hello please use the form on the right to get in touch.</p>
-
-<p>If you have any problems, feel free to contact us directly at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
+<p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific or just say hello please contact us at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
 
 <h3>Dire bonjour!</h3>
 
-<p>Si vous aimeriez réserver un cours d’art, avoir plus d’information sur une image ou un artiste, faire une commande spécifique ou tout simplement dire bonjour, veuillez compléter le formulaire à droite.</p>
-
-<p>Si vous avez des difficultés, n’hésitez pas à prendre contact directement : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
+<p>Si vous aimeriez réserver un cours d’art, avoir plus d’information sur une image ou un artiste, faire une commande spécifique ou tout simplement dire bonjour, n’hésitez pas à prendre contact directement : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
 
