styling almost done
need to tweak some of the layout, fonts, and make the images in blogs
use a slideshow - however this is 80% of the way there

CSS sourced from http://getskeleton.com

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,12 @@ title: Contact
 layout: studio
 ---
 
+<div class="">
+	<div class=""><a href="mailto:info@galeriealpine.com"><i class=""></i>info@galeriealpine.com</a></div>
+	<div class=""><div><i class=""></i><span>+41 76 343 70 28</span></div></div>
+	<div class=""><div><i class=""></i><span>97 Avenue Centrale, 1884 Villars-sur-Ollon</span></div></div>
+</div>
+
 <h3>Say Hello!</h3>
 
 <p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific or just say hello please contact us at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
