tweak CSS and javascript for responsiveness
home page shows latest news and blog posts, will add a few images as
a slide show for that page as well as a little bit of copy

images use slick for slide shows: http://kenwheeler.github.io/slick/
and all image and text content correctly scales when resized

about page now shows Google maps location. add a couple more menu items

TODO:
    - link to GivenGain when we have a campaign on there
    - picture + bio for Rob
    - complete Association page with links to documents
    - fix menu bar to not disappear when scaling or on small screens
    - get images with watermarks
    - create dropbox to allow people to give me content
    - Atelier page needs to be its own and not redirect to blog post
    - (get copy and images for Atelier page from Sophie)
    - Add a google calendar for Atelier classes + contact email link
    - Add images to Atelier photography courses page + more info

once all that is done repoint domains at github or do what is necessary
to have this site be the main one

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 title: Galerie Alpine
 layout: main
 ---
-{% for post in site.posts limit:1 %}
-<br />
-	<strong>{{ post.title }}</strong><br />
-	<div class="">
-		{{ post.date | date: "%B %d, %Y" }}
-	</div>
-	{{ post.excerpt }}
-	<a href="{{ post.url }}">Read More...</a><br />
+
+<h4>Latest News</h4>
+
+<p>
+Next artpéro - August 4th 2017, Galerie Alpine.
+</p>
+
+<h4>Latest Blog Posts</h4>
+
+{% for post in site.posts limit:3 %}
+	<a href="{{ post.url }}"><strong>{{ post.title }}</strong></a>
+	<div>{{ post.author }}, {{ post.date | date: "%B %d, %Y" }}</div>
 	<br />
 {% endfor %}
