--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 title: Artists, designers & photographers
-layout: studio
+layout: main
 ---
 
 <p>We are a group of creatives who got together to share our work and set up an art’s centre for Villars-sur-Ollon. All inspired by nature and the mountains that surround us, we each have a different way of portraying what we see in our own medium. Working in oil, acrylic, ink, watercolour, egg tempera, photography and digitally there is a huge range of talent on show.</p>
