--- a/contact/index.html
+++ b/contact/index.html
@@ -1,19 +1,26 @@
 ---
 title: Contact
-layout: studio
+layout: main
+map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 ---
 
-<div class="">
-	<div class=""><a href="mailto:info@galeriealpine.com"><i class=""></i>info@galeriealpine.com</a></div>
-	<div class=""><div><i class=""></i><span>+41 76 343 70 28</span></div></div>
-	<div class=""><div><i class=""></i><span>97 Avenue Centrale, 1884 Villars-sur-Ollon</span></div></div>
+<div class="row">
+	<div class="six columns">
+		<a href="mailto:info@galeriealpine.com"><i class=""></i>info@galeriealpine.com</a><br />
+		+41 76 343 70 28<br />
+		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
+	</div>
+	<div class="six columns" id="map-canvas"></div>
 </div>
 
-<h3>Say Hello!</h3>
+<div class="row">
+	<div class="twelve columns">
+		<h3>Say Hello!</h3>
 
-<p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific or just say hello please contact us at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
+		<p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific or just say hello please contact us at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
 
-<h3>Dire bonjour!</h3>
+		<h3>Dire bonjour!</h3>
 
-<p>Si vous aimeriez réserver un cours d’art, avoir plus d’information sur une image ou un artiste, faire une commande spécifique ou tout simplement dire bonjour, n’hésitez pas à prendre contact directement : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
-
+		<p>Si vous aimeriez réserver un cours d’art, avoir plus d’information sur une image ou un artiste, faire une commande spécifique ou tout simplement dire bonjour, n’hésitez pas à prendre contact directement : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
+	</div>
+</div>
