tweak artists/visiting artists layout
and more tweaking to various other pages: add association docs, add some
images to atelier/photography page

TODO:
    - link to GivenGain when we have a campaign on there
    - complete Association page copy
    - fix menu bar to not disappear when scaling or on small screens
    - get images with watermarks
    - create dropbox to allow people to give me content
    - Atelier page needs to be its own and not redirect to blog post
    - (get copy and images for Atelier page from Sophie)
    - Add a google calendar for Atelier classes + contact email link
    - Add images to Atelier photography courses page + more info

--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,4 @@ layout: main
 
 <p>We are a group of creatives who got together to share our work and set up an art’s centre for Villars-sur-Ollon. All inspired by nature and the mountains that surround us, we each have a different way of portraying what we see in our own medium. Working in oil, acrylic, ink, watercolour, egg tempera, photography and digitally there is a huge range of talent on show.</p>
 
-<p>Our hope for Galerie Alpine is that it can become a centre of art for Villars and Gryon. We offer art classes for adults and children, photography and plein air painting days with our resident mountain guide and seek to promote art within the local community.</p>
-
-<p>Here till mid June 2017 as a beginning, with your help we can bring light and colour to the region and hopefully inspire you to unleash the artist within.</p>
+<p>Our hope for Galerie Alpine is that it can become a centre of art for Villars and Gryon. We offer art classes for adults and children, photography and plein air painting days with our resident mountain guide and seek to promote art within the local community. With your help we can bring light and colour to the region and hopefully inspire you to unleash the artist within.</p>
