--- a/artists/index.html
+++ b/artists/index.html
@@ -13,29 +13,60 @@ images:
     - 14711548_10157710328210232_5327692004010228824_o-200x200.jpg
     - Fara-head-and-shoulders-200x200.jpg
 ---
-<br />
 
 <h3>Association Artists</h3>
 
-<img src="/img/artists/CAT-FB-Portrait-200x200.jpg" />
-<p>Cat Saunders</p>
-<p>Works in acrylic, silver-leaf and gouache. Cat's delicate touch captures the detail of her subjects.</p>
-<p>Oeuvres en acrylique, feuille d'argent et gouache. La touche délicate de la peinture de Cat saisit le détail de ses sujets.</p>
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/CAT-FB-Portrait-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5><a href="/artists/cat-saunders/">Cat Saunders</a></h5>
+		<p>Works in acrylic, silver-leaf and gouache. Cat's delicate touch captures the detail of her subjects.</p>
+		<p>Oeuvres en acrylique, feuille d'argent et gouache. La touche délicate de la peinture de Cat saisit le détail de ses sujets.</p>
+	</div>
+</div>
 
-<img src="/img/artists/massif_web-200x200.jpg" />
-<p>Rob Scott</p>
-<p>Digital illustration and graphic design.</p>
-<p>Illustration et dessin numérique.</p>
+<hr>
 
-<img src="/img/artists/SJS-FB-Portrait-200x200.jpg" />
-<p>Sophie Scott</p>
-<p>Works in oil, pastels and watercolour. Sophie's paintings bring to life the colours of the mountains.</p>
-<p>Oeuvres en huile, pastels et aquarelles. Les peintures de Sophie animent les couleurs des montagnes.</p>
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/rob-portrait-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5><a href="/artists/rob-scott/">Rob Scott</a></h5>
+		<p>Graphic designer and illustrator with a passion for the beauty of the Villars-Gryon resort.</p>
+		<p>Graphiste et illustrateur avec une passion de la beauté de la région de Villars-Gryon.</p>
+	</div>
+</div>
 
-<img src="/img/artists/lee-avatar.jpg" />
-<p>Lee Johnson</p>
-<p>Photographer working on long term projects using traditional analog techniques.</p>
-<p>Photographe travaillant sur des projets à long terme utilisant des techniques analogiques traditionnelles.</p>
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/SJS-FB-Portrait-200x200.jpg" />
+	</div>
+	<div class="six columns">
+		<h5><a href="/artists/sophie-scott/">Sophie Scott</a></h5>
+		<p>Works in oil, pastels and watercolour. Sophie's paintings bring to life the colours of the mountains.</p>
+		<p>Oeuvres en huile, pastels et aquarelles. Les peintures de Sophie animent les couleurs des montagnes.</p>
+	</div>
+</div>
+
+<hr>
+
+<div class="row">
+	<div class="six columns">
+		<img src="/img/artists/lee-avatar.jpg" />
+	</div>
+	<div class="six columns">
+		<h5><a href="/artists/lee-johnson/">Lee Johnson</a></h5>
+		<p>Photographer working on long term projects using traditional analog techniques.</p>
+		<p>Photographe travaillant sur des projets à long terme utilisant des techniques analogiques traditionnelles.</p>
+	</div>
+</div>
+
+<hr>
 
 <h3>Visiting Artists</h3>
 
