--- a/artists/rob-scott/index.html
+++ b/artists/rob-scott/index.html
@@ -3,15 +3,16 @@ title: Robin Scott
 layout: artist
 image_dir: /img/artists/rob/
 images:
-    - Rob-artist-header-ga.jpg
+    - rob-artist-header-ga.jpg
 ---
 
 {% include slides.html %}
 
-<p></p>
-<p></p>
+<br />
+
+<p>Robin Scott is a graphic designer and illustrator with a passion for the beauty of the Villars-Gryon resort, whose wonderful graphic creations and illustrations take on a past "poster art" that so inspired Alpine tourism</p>
 
 <hr>
 
-<p></p>
+<p>Robin Scott est graphiste et illustrateur avec une passion de la beauté de la région de Villars-Gryon. Ses créations sont étonnantes, alliant un style contemporain, mais aussi rétro, inspiré des anciens affiches vantant le tourism alpin.</p>
 <p></p>
