--- a/association/index.html
+++ b/association/index.html
@@ -3,8 +3,18 @@ title: The Association
 layout: main
 ---
 
-<p></p>
+<h2>{{ page.title }}</h2>
 
-<p></p>
+<p>Some copy about the association here.</p>
 
-<p></p>
+<h5>Status</h5>
+
+<p>
+	The association statuts are available <a href="/doc/statuts.pdf">here</a>.
+</p>
+
+<h5>Minutes / Procès Verbale</h5>
+
+<p>
+	<a href="/doc/PV_23_05_17.pdf">23.05.2017</a>
+</p>
