--- a/atelier/photography/index.html
+++ b/atelier/photography/index.html
@@ -3,9 +3,14 @@ title: Atelier
 layout: main
 image_dir: /img/atelier/photography/
 images:
-    - 
+    - 02_film.jpg
+    - 03_filters.jpg
+    - 04_developing.jpg
+    - 05_developed.jpg
 ---
 
 {% include slides.html %}
+
+<br />
 
 <p>Learn about traditional black & white film photography combined with digital processing, including types of film, old cameras, shooting with filters, development, scanning, and processing for the web + print. Run by Lee Johnson.</p>
