add some copy to homepage
image to about page, opening hours to contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,16 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		<a href="mailto:info@galeriealpine.com"><i class=""></i>info@galeriealpine.com</a><br />
 		+41 76 343 70 28<br />
 		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
+		<br />
+		Opening Hours (Summer):<br />
+		Mon: Fermé<br />
+		Tue: 14h-18h<br />
+		Wed: 10h-13h, 14h-18h<br />
+		Thu: 14h-18h<br />
+		Fri: 10h-13h, 14h-18h<br />
+		Sat: 10h-13h, 14h-18h<br />
+		Sun: 14h-18h<br />
+		<br />
 	</div>
 	<div class="six columns" id="map-canvas"></div>
 </div>
@@ -17,10 +27,10 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 	<div class="twelve columns">
 		<h3>Say Hello!</h3>
 
-		<p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific or just say hello please contact us at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
+		<p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific, or just say hello, please contact us at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
 
 		<h3>Dire bonjour!</h3>
 
-		<p>Si vous aimeriez réserver un cours d’art, avoir plus d’information sur une image ou un artiste, faire une commande spécifique ou tout simplement dire bonjour, n’hésitez pas à prendre contact directement : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
+		<p>Si vous aimeriez réserver un cours d’art, avoir plus d’information sur une image ou un artiste, faire une commande spécifique, ou tout simplement dire bonjour, n’hésitez pas à prendre contact directement : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
 	</div>
 </div>
