--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,15 @@
 ---
 title: Artists, designers & photographers
 layout: main
+image_dir: /img/
+images:
+    - gallery_interior.jpg
 ---
 
-<p>We are a group of creatives who got together to share our work and set up an art’s centre for Villars-sur-Ollon. All inspired by nature and the mountains that surround us, we each have a different way of portraying what we see in our own medium. Working in oil, acrylic, ink, watercolour, egg tempera, photography and digitally there is a huge range of talent on show.</p>
+{% include slides.html %}
 
-<p>Our hope for Galerie Alpine is that it can become a centre of art for Villars and Gryon. We offer art classes for adults and children, photography and plein air painting days with our resident mountain guide and seek to promote art within the local community. With your help we can bring light and colour to the region and hopefully inspire you to unleash the artist within.</p>
+<br />
+
+<p>We are a group of creatives who got together to share our work and set up an art centre for <a href="/contact/">Villars-sur-Ollon</a>. All inspired by nature and the mountains that surround us, we each have a different way of portraying what we see in our own medium. Working in oil, acrylic, ink, watercolour, egg tempera, photography and digitally there is a huge range of talent on show.</p>
+
+<p>Our hope for Galerie Alpine is that it can become a centre of art for Villars and Gryon. We offer <a href="/atelier/art-classes/">art classes for adults and children</a>, photography and plein air painting days with our resident mountain guide and seek to promote art within the local community. With your help we can bring light and colour to the region and hopefully inspire you to unleash the artist within.</p>
