add F1 preview exhibition flyer

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 ---
 title: Galerie Alpine
 layout: main
+image_dir: /img/
+images:
+    - gallery_alpine_A5_flyer_small_black.jpg
 ---
 
 <p>We are a group of creatives who got together to share our work and set up an art centre for <a href="/contact/">Villars-sur-Ollon</a>, in the heart of the Vaud Alps. Here you can find out more information about the <a href="/about/">gallery</a>, our <a href="/artists/">artists</a>, the <a href="/association/">association</a>, the latest <a href="/blog/">news</a>, and <a href="/contact/">where to find us</a>. You will also find us on <a href="https://www.facebook.com/Galerie-Alpine-136288323520164" target="_blank" rel="nofollow">Facebook</a>, <a href="https://www.instagram.com/galeriealpine/" target="_blank" rel="nofollow">Instagram</a>, and <a href="https://twitter.com/GalerieAlpine" target="_blank" rel="nofollow">Twitter</a>.</p>
 
-<h4>Latest News</h4>
+<h4>Latest News / Events</h4>
 
 <p>
-Next artpéro - August 4th 2017, Galerie Alpine.
+Next artpéro - August 4th 2017, Galerie Alpine.<br />
+<br />
+Formula 1 Preview Exhibition + Apéro:<br />
+{% include slides.html %}
 </p>
 
 <h4>Latest Blog Posts</h4>
