--- a/contact/index.html
+++ b/contact/index.html
@@ -23,8 +23,10 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 	<div class="six columns" id="map-canvas"></div>
 </div>
 
+<br />
+
 <div class="row">
-	<div class="twelve columns">
+	<div class="six columns">
 		<h3>Say Hello!</h3>
 
 		<p>Whether you would like to book a class, find out more about a picture or an artist, commission something specific, or just say hello, please contact us at <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
@@ -32,5 +34,39 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		<h3>Dire bonjour!</h3>
 
 		<p>Si vous aimeriez réserver un cours d’art, avoir plus d’information sur une image ou un artiste, faire une commande spécifique, ou tout simplement dire bonjour, n’hésitez pas à prendre contact directement : <a href="mailto:info@galeriealpine.com">info@galeriealpine.com</a></p>
+	</div>
+	<div class="six columns">
+		<!-- Begin MailChimp Signup Form -->
+		<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+		<div id="mc_embed_signup">
+		<form action="//galeriealpine.us16.list-manage.com/subscribe/post?u=2583bd9e889da339e89db40cb&amp;id=e16da487cc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+			<div id="mc_embed_signup_scroll">
+			<h2>Subscribe to our mailing list</h2>
+		<div><p>Hear first about new artists, events, and apéros!</p></div>
+		<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+		<div class="mc-field-group">
+			<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+		</label>
+			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+		</div>
+		<div class="mc-field-group">
+			<label for="mce-FNAME">First Name </label>
+			<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+		</div>
+		<div class="mc-field-group">
+			<label for="mce-LNAME">Last Name </label>
+			<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+		</div>
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2583bd9e889da339e89db40cb_e16da487cc" tabindex="-1" value=""></div>
+			<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+			</div>
+		</form>
+		</div>
+		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+		<!--End mc_embed_signup-->
 	</div>
 </div>
