move mailchimp style into custom.css and tweak spacing

--- a/contact/index.html
+++ b/contact/index.html
@@ -37,23 +37,16 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 	</div>
 	<div class="six columns">
 		<!-- Begin MailChimp Signup Form -->
-		<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 		<div id="mc_embed_signup">
 		<form action="//galeriealpine.us16.list-manage.com/subscribe/post?u=2583bd9e889da339e89db40cb&amp;id=e16da487cc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			<div id="mc_embed_signup_scroll">
-			<h2>Subscribe to our mailing list</h2>
+			<h5>Subscribe to our mailing list</h5>
 		<div><p>Hear first about new artists, events, and apéros!</p></div>
-		<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 		<div class="mc-field-group">
-			<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-		</label>
+			<label for="mce-EMAIL">Email Address </label>
 			<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-		</div>
-		<div class="mc-field-group">
 			<label for="mce-FNAME">First Name </label>
 			<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-		</div>
-		<div class="mc-field-group">
 			<label for="mce-LNAME">Last Name </label>
 			<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
 		</div>
