update index, remove old events

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@ images:
 <h4>Latest News / Events</h4>
 
 <p>
-Next artpéro - August 4th 2017, Galerie Alpine.<br />
+Next artpéro - August 23rd 2017, Galerie Alpine: Formula 1 Preview Exhibition + Apéro:
 <br />
-Formula 1 Preview Exhibition + Apéro:<br />
 {% include slides.html %}
 </p>
 
