--- a/association/index.html
+++ b/association/index.html
@@ -5,16 +5,17 @@ layout: main
 
 <h2>{{ page.title }}</h2>
 
-<p>Some copy about the association here.</p>
+<p>Since the opening of Galerie Alpine in December 2016, as a cooperative of local artists, we have established the ‘GAA - Galerie Alpine and Atelier’ Association in Villars-sur-Ollon at the address: Avenue Centrale 97, 1884 Villars-sur-Ollon. The <a href="/doc/statuts.pdf">Statutes</a> were formalised on <a href="/doc/PV_23_05_17.pdf">23rd May 2017</a>.</p>
 
-<h5>Status</h5>
+<p>Our purpose is to run a center of arts for the community by organising cultural events and educational workshops, offer rental spaces for new artists to get established and to promote and sell the works of mainly local, regional, national and sometimes international artists. To do this the GAA runs an art gallery and atelier (for full purpose see our statutes).</p>
 
-<p>
-	The association statuts are available <a href="/doc/statuts.pdf">here</a>.
-</p>
+<p>Our resources come from a commission on sales, creative workshops and art courses, inscription &amp; membership fees, sponsorship of new artists, gifts and bequests, and the proceeds of any promotional operations.</p>
 
-<h5>Minutes / Procès Verbale</h5>
-
-<p>
-	<a href="/doc/PV_23_05_17.pdf">23.05.2017</a>
+<p>The four active members of the committee are:
+	<ul>
+		<li>Sophie Scott of Bristol (UK), residing in Gryon (VD) - Chairman &amp; artist</li>
+		<li>Robin Scott of Canterbury (UK), residing in Gryon (VD) - Vice-chairman &amp; graphic designer</li>
+		<li>Catherine Saunders of Chertsey (UK), residing in Chesières (VD) – Treasurer &amp; artist</li>
+		<li>Lee Johnson of Huddersfield (UK), residing in Villars-sur-Ollon (VD) – Secretary, photographer &amp; webmaster</li>
+	</ul>
 </p>
