--- a/atelier/art-classes/index.html
+++ b/atelier/art-classes/index.html
@@ -1,5 +1,24 @@
 ---
 title: Art Classes
-layout: redirect
-redirect_to: /2017/01/31/art-classes-in-the-atelier/
+layout: main
+image_dir: /img/atelier/art-classes/
+images:
+    - 
 ---
+
+{% include slides.html %}
+
+<br />
+
+<p></p>
+
+<div class="googleCalendar">
+	<iframe
+		src="https://calendar.google.com/calendar/embed?wkst=1&amp;bgcolor=%23FFFFFF&amp;src=8ub0fj6orq20hj6h2357vcbojs%40group.calendar.google.com&amp;color=%23182C57&amp;ctz=Europe%2FZurich"
+		style="border-width:0"
+		width="800"
+		height="600"
+		frameborder="0"
+		scrolling="no">
+	</iframe>
+</div>
