latest copy and images from Sophie

--- a/association/index.html
+++ b/association/index.html
@@ -7,9 +7,9 @@ layout: main
 
 <p>Since the opening of Galerie Alpine in December 2016, as a cooperative of local artists, we have established the ‘GAA - Galerie Alpine and Atelier’ Association in Villars-sur-Ollon at the address: Avenue Centrale 97, 1884 Villars-sur-Ollon. The <a href="/doc/statuts.pdf">Statutes</a> were formalised on <a href="/doc/PV_23_05_17.pdf">23rd May 2017</a>.</p>
 
-<p>Our purpose is to run a center of arts for the community by organising cultural events and educational workshops, offer rental spaces for new artists to get established and to promote and sell the works of mainly local, regional, national and sometimes international artists. To do this the GAA runs an art gallery and atelier (for full purpose see our statutes).</p>
+<p>Our purpose is to run a center of arts for the community by organising cultural events and educational workshops, offer rental spaces for new artists to get established and to promote and sell the works of mainly local, regional, national and sometimes international artists.</p>
 
-<p>Our resources come from a commission on sales, creative workshops and art courses, inscription &amp; membership fees, sponsorship of new artists, gifts and bequests, and the proceeds of any promotional operations.</p>
+<p>To do this the GAA runs an art gallery and atelier (for full purpose see our statutes). Our resources come from a commission on sales, creative workshops and art courses, inscription &amp; membership fees, sponsorship of new artists, gifts and bequests, and the proceeds of any promotional operations.</p>
 
 <p>The four active members of the committee are:
 	<ul>
