--- a/about/index.html
+++ b/about/index.html
@@ -10,6 +10,6 @@ images:
 
 <br />
 
-<p>We are a group of creatives who got together to share our work and set up an art centre for <a href="/contact/">Villars-sur-Ollon</a>. All inspired by nature and the mountains that surround us, we each have a different way of portraying what we see in our own medium. Working in oil, acrylic, ink, watercolour, egg tempera, photography and digitally there is a huge range of talent on show.</p>
+<p>We are a group of creative people who got together with the vision to create an exhibition space for our work in <a href="/contact/">Villars-sur-Ollon</a>. Inspired by the magnificent and divers alpine landscape that surrounds us, we each have a different way of portraying what we see in our own medium. Working in oil, acrylic, ink, watercolour, egg tempera, photography and digitally - there is a huge range of talent on show.</p>
 
-<p>Our hope for Galerie Alpine is that it can become a centre of art for Villars and Gryon. We offer <a href="/atelier/art-classes/">art classes for adults and children</a>, photography and plein air painting days with our resident mountain guide and seek to promote art within the local community. With your help we can bring light and colour to the region and hopefully inspire you to unleash the artist within.</p>
+<p>Our hope for Galerie Alpine is that it can become a centre of art for Villars and Gryon. We offer <a href="/atelier/art-classes/">art classes for adults and children</a>, clay workshops, and photography guidance. We seek to promote new and established artists within the local and international community. With your help we can bring light and colour to the region and hopefully inspire you to unleash the artist within.</p>
