--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 ---
 title: Galerie Alpine
 layout: main
-image_dir: /img/
-images:
-    - bill_talk_150917.jpg
 ---
 
-<p>We are a group of creatives who got together to share our work and set up an art centre for <a href="/contact/">Villars-sur-Ollon</a>, in the heart of the Vaud Alps. Here you can find out more information about the <a href="/about/">gallery</a>, our <a href="/artists/">artists</a>, the <a href="/association/">association</a>, the latest <a href="/blog/">news</a>, and <a href="/contact/">where to find us</a>. You will also find us on <a href="https://www.facebook.com/Galerie-Alpine-136288323520164" target="_blank" rel="nofollow">Facebook</a>, <a href="https://www.instagram.com/galeriealpine/" target="_blank" rel="nofollow">Instagram</a>, and <a href="https://twitter.com/GalerieAlpine" target="_blank" rel="nofollow">Twitter</a>.</p>
+<p>We are a group of creative people who got together with the vision to create an exhibition space for our work and set up an art centre for <a href="/contact/">Villars-sur-Ollon</a>, in the heart of the Vaud Alps. Here you can find out more information about the <a href="/about/">gallery</a>, our <a href="/artists/">artists</a>, the <a href="/association/">association</a>, the latest <a href="/blog/">news</a>, and <a href="/contact/">where to find us</a>. You will also find us on <a href="https://www.facebook.com/Galerie-Alpine-136288323520164" target="_blank" rel="nofollow">Facebook</a>, <a href="https://www.instagram.com/galeriealpine/" target="_blank" rel="nofollow">Instagram</a>, and <a href="https://twitter.com/GalerieAlpine" target="_blank" rel="nofollow">Twitter</a>.</p>
 
 <h4>Latest News / Events</h4>
 
+<p>Next artpéro: Friday 22nd September 18h-20h30</p>
 <p>
 September 15th 2017, 19h30, Galerie Alpine: An evening talk with artist &amp; mountain guide Bill O'Connor:
 <br />
-{% include slides.html %}
+
+<div class="row">
+	<div class="twelve columns">
+		<a href="/img/bill_talk_150917.jpg">
+			<img class="u-max-full-width" src="/img/bill_talk_150917.jpg" />
+		</a>
+	</div>
+</div>
+
 </p>
 
 <h4>Latest Blog Posts</h4>
