--- a/atelier/art-classes/index.html
+++ b/atelier/art-classes/index.html
@@ -13,23 +13,23 @@ images:
 
 <p>Sophie Scott is a qualified art teacher certified with a BA Hons in art and design and a PGCE specialising in art in secondary schools. She has lived and worked in Villars-Gryon in the Alpes Vaudoises region for the past 17 years as a self-employed artist and as the Junior Art teacher at Aiglon College. All classes can be delivered in both French and English. Please see the Galerie Alpine Atelier calendar below for times and dates, or contact Sophie Scott <a href="mailto:sjs@galeriealpine.com?subject=Atelier Enquiry">sjs@galeriealpine.com</a> for more details about private lessons, kids’ art workshops and adult classes.<p>
 
-<h4>Kids Private Lessons and Group Workshops</h4>
+<h5>Kids Private Lessons and Group Workshops</h5>
 
 <p>For aspiring artists ages 6-14, I offer 1½ hour private lessons at weekends or during the holidays, and group art workshops in the atelier during term time at Galerie Alpine. In the after-school classes - offered Tuesdays to Fridays - students have the opportunity to develop drawing and painting techniques inspired by the wonderful paintings and photography by local artists around the gallery. Beginners start with learning gouache and watercolour painting techniques focusing on flowers, animals and the alpine landscape. More capable artists move on to learning acrylic, oil and mixed media techniques. </p>
 
-<h4>Portfolio Support for GCSE and IB Art students</h4>
+<h5>Portfolio Support for GCSE, A-Level, IB, and Degree level Art students</h5>
 
 <p>If aspiring art students are needing a bit of extra support with their portfolio through private lessons, I am happy to help with developing ideas, improving observation skills, sketchbook annotation and analysis, developing experimental pieces and final outcomes, through drawing and painting - using a wide variety of materials.</p>
 
-<h4>Courses for Adults</h4>
+<h5>Courses for Adults</h5>
 
 <p>For aspiring adult artists of all ages and abilities, I offer drawing and painting evening classes for on Tuesdays, Wednesdays and Thursdays from 6pm-7.30pm. I aim to help develop people’s confidence with drawing – even if you’re a bit rusty - using pastels and watercolour painting techniques inspired by still life studies and the local landscape. For intermediate artists, I am able to help you to advance your drawing skills in a variety of dry materials, as well as your painting skills using watercolour, acrylics, oils and mixed media techniques. Places are limited so please reserve in advance, no experience is necessary and materials are included in the fee.</p>
 
-<h4>Birthdays or School Holidays</h4>
+<h5>Birthdays or School Holidays</h5>
 
 <p>If you wish to arrange a special one-off group workshop as a creative birthday present or a weekend activity with a group of students then please do contact me at least two days in advance: Sophie Scott <a href="mailto:sjs@galeriealpine.com?subject=Atelier Enquiry">sjs@galeriealpine.com</a></p>
 
-<h4>More Information</h4>
+<h5>More Information</h5>
 
 <div class="row">
 	<div class="three columns">
@@ -54,7 +54,7 @@ images:
 	</div>
 </div>
 
-<h4>Atelier Hours and Calendar</h4>
+<h5>Atelier Hours and Calendar</h5>
 
 <div class="googleCalendar">
 	<iframe
