fix typo, add link to Lee's site

--- a/atelier/art-classes/index.html
+++ b/atelier/art-classes/index.html
@@ -23,7 +23,7 @@ images:
 
 <h5>Courses for Adults</h5>
 
-<p>For aspiring adult artists of all ages and abilities, I offer drawing and painting evening classes for on Tuesdays, Wednesdays and Thursdays from 6pm-7.30pm. I aim to help develop people’s confidence with drawing – even if you’re a bit rusty - using pastels and watercolour painting techniques inspired by still life studies and the local landscape. For intermediate artists, I am able to help you to advance your drawing skills in a variety of dry materials, as well as your painting skills using watercolour, acrylics, oils and mixed media techniques. Places are limited so please reserve in advance, no experience is necessary and materials are included in the fee.</p>
+<p>For aspiring adult artists of all ages and abilities, I offer drawing and painting evening classes on Tuesdays, Wednesdays and Thursdays from 6pm-7.30pm. I aim to help develop people’s confidence with drawing – even if you’re a bit rusty - using pastels and watercolour painting techniques inspired by still life studies and the local landscape. For intermediate artists, I am able to help you to advance your drawing skills in a variety of dry materials, as well as your painting skills using watercolour, acrylics, oils and mixed media techniques. Places are limited so please reserve in advance, no experience is necessary and materials are included in the fee.</p>
 
 <h5>Birthdays or School Holidays</h5>
 
