--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@ layout: main
 
 <h4>Latest News / Events</h4>
 
-<p>Next artpéro: Friday 22nd September 18h-20h30</p>
-<p>
-September 15th 2017, 19h30, Galerie Alpine: An evening talk with artist &amp; mountain guide Bill O'Connor:
+<p>Next artpéro: Friday 22nd September 18h-20h30:</p>
 <br />
 
 <div class="row">
 	<div class="twelve columns">
-		<a href="/img/bill_talk_150917.jpg">
-			<img class="u-max-full-width" src="/img/bill_talk_150917.jpg" />
+		<a href="/img/artpero_sept22.jpg">
+			<img class="u-max-full-width" src="/img/artpero_sept22.jpg" />
 		</a>
 	</div>
 </div>
