update opening hours

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,9 +13,9 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		Opening Hours (Summer):<br />
 		Mon: Fermé<br />
 		Tue: 14h-18h<br />
-		Wed: 10h-13h, 14h-18h<br />
+		Wed: 14h-18h<br />
 		Thu: 14h-18h<br />
-		Fri: 10h-13h, 14h-18h<br />
+		Fri: 14h-18h<br />
 		Sat: 10h-13h, 14h-18h<br />
 		Sun: 14h-18h<br />
 		<br />
