update opening hours

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		+41 76 343 70 28<br />
 		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
 		<br />
-		Opening Hours (Summer):<br />
+		Opening Hours (Autumn):<br />
 		Mon: Fermé<br />
 		Tue: 14h-18h<br />
 		Wed: 14h-18h<br />
