update homepage image
link to art classes

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@ layout: main
 
 <h4>Latest News / Events</h4>
 
-<p>Next artpéro: Friday 22nd September 18h-20h30:</p>
+<p><a href="/atelier/art-classes/">Atelier Créatif / Creative Workshops</a>:</p>
 <br />
 
 <div class="row">
 	<div class="twelve columns">
-		<a href="/img/artpero_sept22.jpg">
-			<img class="u-max-full-width" src="/img/artpero_sept22.jpg" />
+		<a href="/atelier/art-classes/">
+			<img class="u-max-full-width" src="/img/atelier/art-classes/poster_for_creative_atelier.jpg" />
 		</a>
 	</div>
 </div>
