--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@ layout: main
 
 <h4>Latest News / Events</h4>
 
+<div class="row">
+	<div class="twelve columns">
+		<img class="u-max-full-width" src="/img/nov_sale_2017.jpg" />
+	</div>
+</div>
+
+<!--
 <p><a href="/atelier/art-classes/">Atelier Créatif / Creative Workshops</a>:</p>
 <br />
 
@@ -17,6 +24,7 @@ layout: main
 		</a>
 	</div>
 </div>
+-->
 
 </p>
 
