--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: main
 
 <div class="row">
 	<div class="twelve columns">
-		<img class="u-max-full-width" src="/img/nov_sale_2017.jpg" />
+		<img class="u-max-full-width" src="/img/artpero_dec22.jpg" />
 	</div>
 </div>
 
