update opening hours

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,14 +10,14 @@ map: [ 46.2989794,7.0543930,"Avenue Centrale 97, 1884 Ollon" ]
 		+41 76 343 70 28<br />
 		97 Avenue Centrale, 1884 Villars-sur-Ollon<br />
 		<br />
-		Opening Hours (Autumn):<br />
+		Opening Hours (Winter):<br />
 		Mon: Fermé<br />
-		Tue: 14h-18h<br />
-		Wed: 14h-18h<br />
-		Thu: 14h-18h<br />
-		Fri: 14h-18h<br />
-		Sat: 10h-13h, 14h-18h<br />
-		Sun: 14h-18h<br />
+		Tue: 10h-13h, 14h-18h<br />
+		Wed: 10h-13h, 14h-18h<br />
+		Thu: 10h-13h, 14h-18h<br />
+		Fri: 10h-13h, 14h-18h<br />
+		Sat: 10h-13h, 14h-19h<br />
+		Sun: 10h-13h, 14h-18h<br />
 		<br />
 	</div>
 	<div class="six columns" id="map-canvas"></div>
