correct some of bad French grammar
corrections by Cécile

--- a/artists/lee-johnson/index.html
+++ b/artists/lee-johnson/index.html
@@ -16,4 +16,4 @@ images:
 <hr>
 
 <p><a href="https://leejo.github.io/projects/alpine_panoramics/">Lee</a> est un photographe originaire du nord de l'Angleterre et vit maintenant et travaille à Villars-sur-Ollon. Sa photographie est un hybride de format moyen analogique traditionnel, plus une impression et un montage numérique sur mesure.</p>
-<p>La photographie de Lee est généralement basée sur des projets à long terme, y compris des sites locaux, tels que Ski Club Villars et une étude sur les stations de ski environnantes en été, pour des projets plus longs et plus personnels de ce qu'il s'intéresse</p>
+<p>La photographie de Lee est typiquement basée sur des projets à long terme, notamment des sites locaux, tels qu’avec le Ski Club Villars et une étude sur les stations de ski environnantes en été, ainsi que des projets plus longs et plus personnels de sujets qui l'intéressent.</p>
