add new atelier hours + membership details

--- a/atelier/art-classes/index.html
+++ b/atelier/art-classes/index.html
@@ -4,7 +4,7 @@ layout: artist
 image_dir: /img/atelier/art-classes/
 images:
     - Gallery-8743-col-Web.jpg
-    - atelier_hours.png
+    - atelier_member_hours_2018.jpg
 ---
 
 {% include slides.html %}
