--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@ layout: main
 
 <p>We are a group of creative people who got together with the vision to create an exhibition space for our work and set up an art centre for <a href="/contact/">Villars-sur-Ollon</a>, in the heart of the Vaud Alps. Here you can find out more information about the <a href="/about/">gallery</a>, our <a href="/artists/">artists</a>, the <a href="/association/">association</a>, the latest <a href="/blog/">news</a>, and <a href="/contact/">where to find us</a>. You will also find us on <a href="https://www.facebook.com/Galerie-Alpine-136288323520164" target="_blank" rel="nofollow">Facebook</a>, <a href="https://www.instagram.com/galeriealpine/" target="_blank" rel="nofollow">Instagram</a>, and <a href="https://twitter.com/GalerieAlpine" target="_blank" rel="nofollow">Twitter</a>.</p>
 
-<h4>Latest News / Events</h4>
+<u><h4>Latest News / Events</h4></u>
+
+<h5>Carte de membre / Membership Card</h5>
+
+<p>Devenez membre de l'Association GAA à partir du 1er janvier 2018 et bénéficiez de 10% de réduction sur tous les achats à la galerie et 10.-CHF de moins sur tous les tarifs <a href="/atelier/art-classes/">d’ateliers créatifs</a> jusqu'au 31 décembre 2018 : <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">plus d'info</a>.</p>
+
+<p>Become a member of the GAA Association from 1st January 2018 and benefit from 10% off all purchases at the gallery and 10.-CHF off all <a href="/atelier/art-classes/">creative workshops</a> until 31st December 2018: <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">more info</a>.</p>
+
+<h5>Prochaine Artpéro / Next Artpéro</h5>
 
 <div class="row">
 	<div class="twelve columns">
@@ -28,7 +36,7 @@ layout: main
 
 </p>
 
-<h4>Latest Blog Posts</h4>
+<u><h4>Latest Blog Posts</h4></u>
 
 {% for post in site.posts limit:3 %}
 	<a href="{{ post.url }}"><strong>{{ post.title }}</strong></a>
