update atelier flyers
add Rob's price list + order form

--- a/artists/rob-scott/index.html
+++ b/artists/rob-scott/index.html
@@ -10,6 +10,8 @@ images:
 
 <br />
 
+<p><a href="/img/artists/rob/price_list_2018.jpg">Price list</a> and phone cover <a href="/img/artists/rob/phone_cover_order_form.pdf">order form</a>.</p>
+
 <p>Robin Scott is a graphic designer and illustrator with a passion for the beauty of the Villars-Gryon resort, whose wonderful graphic creations and illustrations take on a past "poster art" that so inspired Alpine tourism</p>
 
 <hr>
