--- a/atelier/art-classes/index.html
+++ b/atelier/art-classes/index.html
@@ -32,24 +32,26 @@ images:
 <h5>More Information</h5>
 
 <div class="row">
-	<div class="three columns">
+	<div class="four columns">
 		<a href="/img/atelier/art-classes/a5_poster_for_art_classes.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/a5_poster_for_art_classes.jpg" />
+			<img class="u-max-full-width" src="/img/atelier/art-classes/a5_poster_for_art_classes_2018.jpg" />
 		</a>
 	</div>
-	<div class="three columns">
+<!--
+	<div class="four columns">
 		<a href="/img/atelier/art-classes/poster_for_creative_atelier.jpg">
 			<img class="u-max-full-width" src="/img/atelier/art-classes/poster_for_creative_atelier.jpg" />
 		</a>
 	</div>
-	<div class="three columns">
+-->
+	<div class="four columns">
 		<a href="/img/atelier/art-classes/kids_poster_EN.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_EN.jpg" />
+			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_EN_2018.jpg" />
 		</a>
 	</div>
-	<div class="three columns">
+	<div class="four columns">
 		<a href="/img/atelier/art-classes/kids_poster_FR.jpg">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_FR.jpg" />
+			<img class="u-max-full-width" src="/img/atelier/art-classes/kids_poster_FR_2018.jpg" />
 		</a>
 	</div>
 </div>
