next artpero poster

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@ layout: main
 
 <h5>Prochaine Artpéro / Next Artpéro</h5>
 
+9 et 24 février: 18h-20h30
+
 <div class="row">
 	<div class="twelve columns">
-		<img class="u-max-full-width" src="/img/artpero_dec30.jpg" />
+		<img class="u-max-full-width" src="/img/artpero_feb09.jpg" />
 	</div>
 </div>
 
