add Ildze to artists page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: main
 
 <h5>Prochaine Artpéro / Next Artpéro</h5>
 
-9 et 24 février: 18h-20h30
+24 février: 18h-20h30
 
 <div class="row">
 	<div class="twelve columns">
