artpéros and workshops on homepage

--- a/index.html
+++ b/index.html
@@ -13,30 +13,32 @@ layout: main
 
 <p>Become a member of the GAA Association from 1st January 2018 and benefit from 10% off all purchases at the gallery and 10.-CHF off all <a href="/atelier/art-classes/">creative workshops</a> until 31st December 2018: <a href="/img/atelier/art-classes/atelier_member_hours_2018.pdf">more info</a>.</p>
 
-<h5>Prochaine Artpéro / Next Artpéro</h5>
-
-24 février: 18h-20h30
-
-<div class="row">
-	<div class="twelve columns">
-		<img class="u-max-full-width" src="/img/artpero_feb09.jpg" />
-	</div>
-</div>
-
-<!--
-<p><a href="/atelier/art-classes/">Atelier Créatif / Creative Workshops</a>:</p>
 <br />
 
+<h5>Clay Modelling Workshops</h5>
+
+16, 17, et 18 mars : 10h-13h<br />
+17 mars (pour les enfants) : 15h-17h
+
 <div class="row">
 	<div class="twelve columns">
-		<a href="/atelier/art-classes/">
-			<img class="u-max-full-width" src="/img/atelier/art-classes/poster_for_creative_atelier.jpg" />
-		</a>
+		<img class="u-max-full-width" src="/img/workshop_mars.jpg" />
 	</div>
 </div>
--->
 
-</p>
+<br />
+
+<h5>Prochaine Artpéro / Next Artpéro</h5>
+
+16 et 30 mars : 18h-20h30
+
+<div class="row">
+	<div class="twelve columns">
+		<img class="u-max-full-width" src="/img/artpero_mars16.jpg" />
+	</div>
+</div>
+
+<br />
 
 <u><h4>Latest Blog Posts</h4></u>
 
