update interior images

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,9 @@ title: Artists, designers & photographers
 layout: main
 image_dir: /img/
 images:
-    - gallery_interior.jpg
+    - interior_1.jpg
+    - interior_2.jpg
+    - interior_3.jpg
 ---
 
 {% include slides.html %}
