comment out workshop

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ layout: main
 
 <br />
 
+<!--
 <h5>Clay Modelling Workshops</h5>
 
 16, 17, et 18 mars : 10h-13h<br />
@@ -27,10 +28,11 @@ layout: main
 </div>
 
 <br />
+-->
 
 <h5>Prochaine Artpéro / Next Artpéro</h5>
 
-16 et 30 mars : 18h-20h30
+30 mars : 18h-20h30
 
 <div class="row">
 	<div class="twelve columns">
