--- a/artists/lee-johnson/index.html
+++ b/artists/lee-johnson/index.html
@@ -10,10 +10,10 @@ images:
 
 <br />
 
-<p><a href="https://leejo.github.io/projects/alpine_panoramics/">Lee</a> is a photographer originally from Northern England and now living and working in Villars-sur-Ollon. His photography is a hybrid of traditional analog medium format plus bespoke digital printing and mounting.</p>
+<p><a href="https://leejo.github.io/projects/alpine_panoramics/">Lee</a> is a photographer originally from Northern England and now living and working in Villars-sur-Ollon. His photography is a hybrid of traditional analog medium/large format plus bespoke digital printing and mounting.</p>
 <p>Lee's photography is typically based around long term projects including locally based ones, such as with Ski Club Villars and a study of surrounding ski resorts in the summer, to longer more personal projects of things he is interested in.</p>
 
 <hr>
 
-<p><a href="https://leejo.github.io/projects/alpine_panoramics/">Lee</a> est un photographe originaire du nord de l'Angleterre et vit maintenant et travaille à Villars-sur-Ollon. Sa photographie est un hybride de format moyen analogique traditionnel, plus une impression et un montage numérique sur mesure.</p>
+<p><a href="https://leejo.github.io/projects/alpine_panoramics/">Lee</a> est un photographe originaire du nord de l'Angleterre et vit maintenant et travaille à Villars-sur-Ollon. Sa photographie est un hybride de format moyen/grand analogique traditionnel, plus une impression et un montage numérique sur mesure.</p>
 <p>La photographie de Lee est typiquement basée sur des projets à long terme, notamment des sites locaux, tels qu’avec le Ski Club Villars et une étude sur les stations de ski environnantes en été, ainsi que des projets plus longs et plus personnels de sujets qui l'intéressent.</p>
